--- a/index.html
+++ b/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="/css/bootstrap.css" media="screen"
-    title="no title" charset="utf-8">
-    <link type="text/css" ref="stylesheet" src="styles.css" media="screen">
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.2.1.js"></script>
     <script src="js/scripts.js"></script>
-    <title></title>
+    <title>Colors</title>
   </head>
   <body>
     <div class="container">
-      <h1>HTML help</h1>
+      <h1>What's your favorite color?</h1>
+      <p>Click a button to choose what color you'd like this page to be:</p>
 
-      <p>This is a very special page. If you click somewhere, it will tell you what type of HTML element you clicked on.</p>
+      <div class="highlight-text">
+        <p id="pclick">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
 
-      <p>Look at this cute walrus!</p>
-      <img src="img/walrus.jpg">
+      <button class="btn btn-success" id="green">Green</button>
+      <button class="btn btn-warning" id="yellow">Yellow</button>
+      <button class="btn btn-danger" id="red">Red</button>
+      <button class="btn" id="pink">Pink</button>
+      <button class="btn" id="reset">RESET</button>
     </div>
   </body>
 </html>
